tests/baselines/reference/subtypesOfTypeParameter.errors.txt
subtypesOfTypeParameter.ts(4,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypesOfTypeParameter.ts(8,5): error TS2416: Property 'foo' in type 'D1<T, U>' is not assignable to the same property in base type 'C3<T>'.
  Type 'U' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
subtypesOfTypeParameter.ts(8,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypesOfTypeParameter.ts(17,12): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypesOfTypeParameter.ts(18,15): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypesOfTypeParameter.ts(24,11): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
subtypesOfTypeParameter.ts(63,21): error TS2454: Variable 'i1' is used before being assigned.
subtypesOfTypeParameter.ts(67,22): error TS2454: Variable 'c1' is used before being assigned.
subtypesOfTypeParameter.ts(72,22): error TS2454: Variable 'c2' is used before being assigned.
subtypesOfTypeParameter.ts(83,22): error TS2454: Variable 'af' is used before being assigned.
subtypesOfTypeParameter.ts(87,22): error TS2454: Variable 'ac' is used before being assigned.


==== subtypesOfTypeParameter.ts (11 errors) ====
    // checking whether other types are subtypes of type parameters
    
    class C3<T> {
        foo: T;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class D1<T, U> extends C3<T> {
        foo: U; // error
        ~~~
!!! error TS2416: Property 'foo' in type 'D1<T, U>' is not assignable to the same property in base type 'C3<T>'.
!!! error TS2416:   Type 'U' is not assignable to type 'T'.
!!! error TS2416:     'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
!!! related TS2208 subtypesOfTypeParameter.ts:7:13: This type parameter might need an `extends T` constraint.
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    function f1<T, U>(x: T, y: U) {
        var r = true ? x : y; // error
        var r = true ? y : x; // error
    }
    
    interface I1 { foo: number; }
    class C1 { foo: number; }
               ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class C2<T> { foo: T; }
                  ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    enum E { A }
    function f() { }
    namespace f {
        export var bar = 1;
    }
    class c { baz: string }
              ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    namespace c {
        export var bar = 1;
    }
    
    // errors throughout
    function f2<T, U>(x: T, y: U) {
        var r0 = true ? x : null;
        var r0 = true ? null : x;
    
        var u: typeof undefined;
        var r0b = true ? u : x;
        var r0b = true ? x : u;
    
        var r1 = true ? 1 : x; 
        var r1 = true ? x : 1;
    
        var r2 = true ? '' : x;
        var r2 = true ? x : '';
    
        var r3 = true ? true : x;
        var r3 = true ? x : true;
    
        var r4 = true ? new Date() : x;
        var r4 = true ? x : new Date();
    
        var r5 = true ? /1/ : x;
        var r5 = true ? x : /1/;
    
        var r6 = true ? { foo: 1 } : x;
        var r6 = true ? x : { foo: 1 };
    
        var r7 = true ? () => { } : x;
        var r7 = true ? x : () => { };
    
        var r8 = true ? <T>(x: T) => { return x } : x;
        var r8b = true ? x : <T>(x: T) => { return x }; // type parameters not identical across declarations
    
        var i1: I1;
        var r9 = true ? i1 : x;
                        ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
        var r9 = true ? x : i1;
    
        var c1: C1;
        var r10 = true ? c1 : x;
                         ~~
!!! error TS2454: Variable 'c1' is used before being assigned.
        var r10 = true ? x : c1;
    
    
        var c2: C2<number>;
        var r12 = true ? c2 : x;
                         ~~
!!! error TS2454: Variable 'c2' is used before being assigned.
        var r12 = true ? x : c2;
    
    
        var r13 = true ? E : x;
        var r13 = true ? x : E;
    
        var r14 = true ? E.A : x;
        var r14 = true ? x : E.A;
    
        var af: typeof f;
        var r15 = true ? af : x;
                         ~~
!!! error TS2454: Variable 'af' is used before being assigned.
        var r15 = true ? x : af;
    
        var ac: typeof c;
        var r16 = true ? ac : x;
                         ~~
!!! error TS2454: Variable 'ac' is used before being assigned.
        var r16 = true ? x : ac;
    
        function f17<T>(a: T) {
            var r17 = true ? x : a;
            var r17 = true ? a : x;
        }
    
        function f18<T, U extends T>(a: U) {
            var r18 = true ? x : a;
            var r18 = true ? a : x;
        }
    
        var r19 = true ? new Object() : x; // BCT is Object
        var r19 = true ? x : new Object(); // BCT is Object
    
        var r20 = true ? {} : x; // ok
        var r20 = true ? x : {}; // ok
    }